--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "hono-pino": "^0.7.0",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
-    "stoker": "^1.4.2"
+    "stoker": "^1.4.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
