--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "tsx watch src/index.ts",
     "typecheck": "tsc --noEmit",
     "lint": "biome check",
-    "lint:fix": "biome check --write"
+    "lint:fix": "biome check --write",
+    "start": "tsx src"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
