--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "jsxImportSource": "hono/jsx",
     "moduleResolution": "bundler",
     "baseUrl": "./",
+    "outDir": "dist",
     "paths": {
       "@/*": ["src/*"]
     }
