add dotenv for backward compatibility

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hono/node-server": "^1.13.7",
     "@hono/zod-openapi": "^0.18.3",
     "@scalar/hono-api-reference": "^0.5.162",
+    "dotenv": "^16.4.5",
     "hono": "^4.6.12",
     "hono-pino": "^0.7.0",
     "pino": "^9.5.0",
