--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@hono/zod-openapi": "^0.18.3",
+    "@libsql/client": "^0.14.0",
     "@scalar/hono-api-reference": "^0.5.162",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.37.0",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.6.12",
     "hono-pino": "^0.7.0",
     "pino": "^9.5.0",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/node": "^20.11.17",
+    "drizzle-kit": "^0.29.1",
     "tsx": "^4.7.1",
     "typescript": "^5.7.2"
   }
