--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "biome check",
     "lint:fix": "biome check --write",
-    "start": "tsx src"
+    "start": "drizzle-kit push && tsx src"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
