--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "biome check",
     "lint:fix": "biome check --write",
-    "start": "drizzle-kit push && tsx src"
+    "start": "drizzle-kit push && tsx src",
+    "test": "vitest"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
@@ -29,6 +30,7 @@
     "@types/node": "^20.11.17",
     "drizzle-kit": "^0.29.1",
     "tsx": "^4.7.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
